feat: Add shelfs feature
This commit introduces the shelfs feature, including:

-   **New Shelfs Tab:** Adds a new tab called "Shelfs" to the main navigation.
-   **Shelfs List and Details:** Implements basic UI for displaying a list of shelfs and individual shelf details.
-   **Database Integration:** Sets up Room database entities and DAOs for managing shelf data.
-   **Data and Domain Layers:** Creates new modules (`feature/shelfs/data`, `feature/shelfs/domain`) for handling shelf data and business logic.
-   **Analytics:** Adds analytics events for tracking shelf-related interactions.
-   **Icon and String Resources:** Introduces new icons and string resources for the shelfs feature.
-   **Navigation:** Implements navigation between the shelfs list and shelf details screens using Decompose.
- **Code Structure:** Includes changes in dependencies and structure related to new files.

--- a/translations/src/commonMain/composeResources/values/strings.xml
+++ b/translations/src/commonMain/composeResources/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="home">Home</string>
     <string name="games">Games</string>
     <string name="chats">Chats</string>
+    <string name="shelfs">Shelfs</string>
     <string name="game_length">Game Length</string>
     <string name="game_complexity">Complexity</string>
     <string name="game_age_recommendation">Age</string>
