--- a/translations/src/commonMain/composeResources/values/strings.xml
+++ b/translations/src/commonMain/composeResources/values/strings.xml
@@ -77,4 +77,5 @@
     <string name="error_database_specific">Database error in %1$s. Please try again.</string>
     <string name="error_unknown">An unexpected error occurred. Please try again.</string>
     <string name="error_retry">Retry</string>
+    <string name="shelves_list">Shelves list</string>
 </resources>
