--- a/translations/src/commonMain/composeResources/values/strings.xml
+++ b/translations/src/commonMain/composeResources/values/strings.xml
@@ -12,7 +12,8 @@
     <string name="amount_of_players">Players</string>
     <string name="chat_lists_recent_chats">Recent chats</string>
     <string name="home_recent_games">Recent games</string>
-    <string name="home_no_recent_games">No recent games found</string>
+    <string name="home_no_recent_games">No recent games… but adventure awaits!</string>
+    <string name="home_browse_games">Browse Games</string>
     <string name="home_whats_new">What's new</string>
     <string name="home_greeting_title">Good to see ya' back!</string>
     <string name="home_greeting_subtitle">On what quest are we taking on today?</string>
