--- a/translations/src/commonMain/composeResources/values/strings.xml
+++ b/translations/src/commonMain/composeResources/values/strings.xml
@@ -90,4 +90,13 @@
     <string name="shelves_no_games">No games in this shelf</string>
     <string name="shelves_no_image">No Image</string>
     <string name="game_added_to_shelf">Game added to shelf: %1$s</string>
+    <string name="game_details_add_to_shelf">Add to Shelf</string>
+    <string name="game_details_no_shelves">You don't have any shelves yet.</string>
+    <string name="game_details_select_shelf">Select a shelf:</string>
+    <string name="game_details_ok">OK</string>
+    <string name="game_details_cancel">Cancel</string>
+    <string name="game_details_add_to_shelf_description">Add to shelf</string>
+    <string name="game_details_remove_from_favorites">Remove from favorites</string>
+    <string name="game_details_add_to_favorites">Add to favorites</string>
+    <string name="game_details_description">Description</string>
 </resources>
