--- a/translations/src/commonMain/composeResources/values/strings.xml
+++ b/translations/src/commonMain/composeResources/values/strings.xml
@@ -99,4 +99,11 @@
     <string name="game_details_remove_from_favorites">Remove from favorites</string>
     <string name="game_details_add_to_favorites">Add to favorites</string>
     <string name="game_details_description">Description</string>
+    <string name="shelf_details_games_count">Games (%1$d)</string>
+    <string name="shelf_details_failed_to_delete">Failed to delete shelf: %1$s</string>
+    <string name="shelf_details_players">Players: %1$s</string>
+    <string name="shelf_details_time">Time: %1$s</string>
+    <string name="shelf_details_rating">Rating: %1$s</string>
+    <string name="shelf_details_back">Back</string>
+    <string name="shelf_details_delete">Delete Shelf</string>
 </resources>
