--- a/translations/src/commonMain/composeResources/values/strings.xml
+++ b/translations/src/commonMain/composeResources/values/strings.xml
@@ -109,4 +109,8 @@
     <string name="shelf_details_confirm_delete">Delete Shelf</string>
     <string name="shelf_details_confirm_delete_message">Are you sure you want to delete the shelf "%1$s"? This action cannot be undone.</string>
     <string name="shelf_details_cancel">Cancel</string>
+    <string name="shelf_details_confirm_remove_game">Remove Game</string>
+    <string name="shelf_details_confirm_remove_game_message">Are you sure you want to remove "%1$s" from this shelf?</string>
+    <string name="shelf_details_remove">Remove</string>
+    <string name="shelf_details_remove_game_description">Remove game from shelf</string>
 </resources>
